--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="default_info_snippet">No places found, because location permission is disabled.</string>
 
     <string name="default_notification_channel_id">STORE4Me_01</string>
+    <string name="kenya">Kenya</string>
 
 
 </resources>
